[package]
name = "kvs"
version = "0.1.0"
authors = ["Zihao Liu <zliu927@brandeis.edu>"]
description = "A key-value store"
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = {version = "4.1.4",  features = ["derive"]}
failure = {version = "0.1.8"}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.79"
file_offset = "0.1.1"