[package]
name = "kvs"
version = "0.1.0"
authors = ["Zihao Liu <zliu927@brandeis.edu>"]
description = "A key-value store"
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0.7"
criterion = "0.4.0"
predicates = "2.1.4"
tempfile = "3.3.0"
walkdir = "2.3.2"
rand = "0.8.5"

[dependencies]
clap = {version = "4.1.4",  features = ["derive"]}
failure = {version = "0.1.8", features = ["derive"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.79"
file_offset = "0.1.1"
slog = "2.7.0"
slog-term = "2.9.0"
slog-json = "2.6.1"
slog-async = "2.7.0"
sled = "0.34.7"

[[bench]]
name = "benchmark1"
harness = false