[package]
name = "kvs"
version = "0.1.0"
authors = ["Zihao Liu <zliu927@brandeis.edu>"]
description = "A key-value store"
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
tempfile = "3.3.0"
walkdir = "2.3.2"
rand = "0.8.5"
criterion = {version = "0.4.0", features = ["async_tokio", "html_reports"] }

[dependencies]
clap = {version = "4.1.4",  features = ["derive"]}
failure = {version = "0.1.8", features = ["derive"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.79"
file_offset = "0.1.1"
log = "0.4.17"
env_logger = "0.10.0"
slog = "2.7.0"
slog-term = "2.9.0"
slog-json = "2.6.1"
slog-async = "2.7.0"
sled = "0.34.7"
plotters = "0.3.4"
panic-control = "0.1.4"
num_cpus = "1.15.0"
rayon = "1.6.1"
crossbeam-skiplist = "0.1.1"
crossbeam-utils = "0.8.14"

[[bench]]
name = "bench_kvs_vs_sled"
harness = false


[[bench]]
name = "bench_threadpool_engine"
harness = false


[[bench]]
name = "bench_diff_threadpool"
harness = false

