[package]
name = "kvs"
version = "0.1.0"
authors = ["Zihao Liu <zliu927@brandeis.edu>"]
description = "A key-value store"
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"

[dependencies]
clap = {version = "4.1.4",  features = ["derive"]}
# reqwest = {version = "0.11.11",features = ["json"]}
# tokio = {version = "1.21.0",features = ["full"]}